k8s/10-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: s-shop-system
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: app
          image: romasmi/s-shop-system:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8000
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
