k8s/20-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: s-shop-api
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: app
          image: romasmi/s-shop-system
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
