k8s/30-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: s-shop-system
spec:
  selector:
    app: api
  ports:
    - name: web
      port: 8000
      targetPort: 8000
