k8s/30-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress
  namespace: s-shop-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /otusapp/([^/]+)/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /
            backend:
              service:
                name: api
                port:
                  number: 8000
            pathType: Prefix
